--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^4.2.4"
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "https://questionquery.onrender.com",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
